# cute-intraday-option-strats

./: .env.example  .gitignore  README.md  pyproject.toml
docs/assets/: c36-quality-example-trades.csv
examples/: export_trade_log.py  inspect_model_metadata.py  run_c36_quality.py
src/cuteoptionstrats/: __init__.py  cli.py  models.py  runtime.py
tests/: test_public_surface.py
